2011-11-28  Dana Jansens  <danakj@chromium.org>

        FloatQuad::isRectilinear() returns false for 180degree rotations
        https://bugs.webkit.org/show_bug.cgi?id=73040

        Reviewed by James Robinson.

        * WebKit.gypi:
        * tests/FloatQuadTest.cpp: Added.
        (WebCore::TEST):

2011-11-28  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r101273.
        http://trac.webkit.org/changeset/101273
        https://bugs.webkit.org/show_bug.cgi?id=73244

        multiple test failures and timeouts (Requested by tony^work on
        #webkit).

        * WebKit.gyp:

2011-11-28  Fady Samuel  <fsamuel@chromium.org>

        [Chromium] Fix broken DRT build for Aura Linux
        https://bugs.webkit.org/show_bug.cgi?id=72667

        Reviewed by Tony Chang.

        * WebKit.gyp:

2011-11-28  Adam Barth  <abarth@webkit.org>

        [Chromium] Move "final" batch of headers into public/platform
        https://bugs.webkit.org/show_bug.cgi?id=73198

        Reviewed by Darin Fisher.

        This patch moves another group of headers into the platform directory.
        I found these headers by reading through the list of headers and
        coorelating them with WebCore concepts.  This patch doesn't move all
        the APIs that coorespond to WebCore platform concepts because some,
        such as WebFontCache, are not used to support the WebCore platform but
        rather to provide the embedder access to the WebCore concept.  This
        patch should be the last bulk move of headers.

        There are two main groups of headers that make up the bulk of this
        patch:

        1) URLLoader-related headers.
        2) Geometry-related headers.

        * public/WebArrayBufferView.h: Replaced.
        * public/WebBlobData.h: Replaced.
        * public/WebCookie.h: Replaced.
        * public/WebExternalTextureLayer.h: Update include.
        * public/WebFloatPoint.h: Replaced.
        * public/WebFloatQuad.h: Replaced.